# xplane-ai-mcp

./: .gitignore  CONTRIBUTING.md  Directory.Build.props  LICENSE  MCP_API_OVERVIEW.md  Makefile  README.md  Taskfile.yml  make.cmd  make.ps1  pyproject.toml
.example_cmds/: stdio-json-examples.md
archived/python/: Makefile  Taskfile.yml  make.cmd  make.ps1  pyproject.toml
archived/python/src/xplane_mcp/: __init__.py  failures.py  mcp_server.py  xplane_client.py
archived/python/tests/: test_xplane_client.py
docs/features/: weather-control.md
examples/: flight.json
installer/: CodexConfigDlg.wxs  CodexSetup.txt  CopyCodexMcpSnippet.cmd  CopyCodexMcpSnippet.ps1  License.rtf  Package.wxs  SetCodexSnippet.js  WixUI_InstallDir_xplane.wxs  xplaneMcp.wixproj
python/src/xplane_mcp/: __init__.py  failures.py
refs/: README.md  datarefs.csv  prefix_index.md
scripts/: build-msi.ps1  build-msi.sh  datarefs_txt_to_csv.py  prepare_installer_assets.py  publish-server.ps1  publish-server.sh
src/: XPlaneMcp.sln
src/XPlaneMcp.Server/: Program.cs  StockAircraftCatalog.cs  XPlaneApiException.cs  XPlaneConfig.cs  XPlaneMcp.Server.csproj  XPlaneMcpService.cs  XPlaneMcpToolErrors.cs  XPlaneMcpTools.cs  XPlaneRestClient.cs  XPlaneWebSocketSession.cs
src/XPlaneMcp.Server.Tests/: McpServerVersionTests.cs  XPlaneMcp.Server.Tests.csproj  XPlaneRestClientTests.cs
src/xplane_mcp/: __init__.py  mcp_server.py  poc.py  xplane_client.py
src/xplane_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  integration_constants.py  mcp_integration.py  mcp_stdio.py  test_list_aircraft_liveries_schema.py  test_mcp_stdio_framing.py  test_version.py  test_workspace_imports.py  test_workspace_smoke.py  test_xplane_client.py  test_xplane_integration.py
tests/integration/: test_failures.py  test_flight.py  test_other.py  test_weather.py
workspace_stub/: __init__.py
