[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xplane-ai-mcp-workspace"
version = "0.2.0"
description = "Workspace metadata for repo-root integration tests; primary MCP server is .NET (see src/XPlaneMcp.Server). Python client for pytest lives under python/src/xplane_mcp."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "websockets>=12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["workspace_stub"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["python/src"]
addopts = ["-m", "not integration"]
markers = [
  "integration: live tests against a running X-Plane instance; run with: pytest -m integration --xplane-root=PATH",
]
