[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xplane-ai-mcp-workspace"
version = "0.2.0"
description = "Repo-root pytest and dev metadata; MCP server is .NET (see src/XPlaneMcp.Server)."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pillow>=10.0",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
addopts = ["-m", "not integration"]
markers = [
  "integration: live tests via MCP stdio + X-Plane; run with: pytest -m integration --xplane-root=PATH [--mcp-server=EXE]",
]
