[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xplane-mcp"
version = "0.1.0"
description = "Archived Python reference client and PoC for X-Plane 12 local Web API (C# is the supported MCP server)."
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-m", "not integration"]
markers = [
  "integration: live tests against a running X-Plane instance; run with: pytest -m integration --xplane-root=PATH",
]
